--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,18 +1,21 @@
-install:
-commands:
-- echo Nothing to do in the install phase
-pre_build:
-commands:
-- echo Nothing to do in the pre_build phase
-build:
-commands:
-- echo build started on 'date'
-- mvn install
-post_build:
-commands:
-- echo build completed on 'date'
+version: 0.2
+phases:
+    install:
+        commands:
+            - echo Nothing to do in the install phase
+            pre_build:
+                commands:
+                    - echo Nothing to do in the pre_build phase
+    build:
+        commands:
+            - echo build started on 'date'
+            - mvn install
+    post_build:
+        commands:
+            - echo build completed on 'date'
 artifacts:
-  files:
-    - https://chrisblankenheimproject4.s3.amazonaws.com/output/
-discard-paths: no
-base-directory: build
+    files:
+        - https://chrisblankenheimproject4.s3.amazonaws.com/output/
+    discard-paths: no
+    base-directory: build
+
