--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,12 +4,13 @@ phases:
   pre_build:
     commands:
       #installs dependencies into the node_modules/ directory
-      - npm install
+      - echo Nothing to do in pre_build phase
+     # - npm install
   build:
     commands:
       - echo Build started on `date`
       - echo Compiling
-      - npm run build
+    #  - npm run build
   post_build:
     commands:
       - echo Build completed on `date`
