--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,7 +18,7 @@ phases:
 artifacts:
   files:
     - "**/*"
-    - target/buildspec.yml
-  name: buildspec.yml
-  discard-paths: no
-  base-directory: build
+    - target/output.txt
+  name: output.txt
+  discard-paths: yes
+  base-directory: src
