--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,7 +18,7 @@ phases:
 artifacts:
   files:
     - "**/*"
-    - target/output.txt
+    - target/s3://chrisblankenheimproject4/output/
   name: output.txt
   discard-paths: yes
   base-directory: src
